Opened 16 years ago

Closed 16 years ago

#3660 closed bug (fixed)

Canna input method won't work

Reported by: mt Owned by: korli
Priority: normal Milestone: R1
Component: Add-Ons/Input Methods Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

After hrev29876, canna input method won't work.
In src/add-ons/input_server/methods/canna/CannaLooper.cpp, CannaLooper::ReadSettings() is reading setting from system/etc, not system/data. So, please change CannaLooper.cpp or build/jam/HaikuImage.

status_t
CannaLooper::ReadSettings( char *basepath )
{
#ifndef __HAIKU__ 
	strcpy( basepath, "/boot/home/config/KanBe/" );
#else
	strcpy( basepath, "/etc/KanBe/" );
#endif

Change History (3)

comment:1 by axeld, 16 years ago

Resolution: fixed
Status: newclosed

Thanks for the note, I apparently forgot about it. Fixed in hrev29881.

comment:2 by mt, 16 years ago

Resolution: fixed
Status: closedreopened

Thanks Axel, but canna input method still not works in hrev29861. In CannaLooper::ReadSettings(), 'basepath' need to be terminated by '/' (like "/boot/system/data/KanBe/") .

comment:3 by axeld, 16 years ago

Resolution: fixed
Status: reopenedclosed

Sorry, should be fixed for real in hrev29897. I've also renamed the KanBe directory to Canna, to have the same name for both.

Note: See TracTickets for help on using tickets.