* Forgot to update the Canna directory. * This fixes bug #3660.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29881 a95241bf-73f2-0310-859d-f6bbb57e9c96